# agentctl

./: LICENSE  README.md  pyproject.toml
agentctl/: __init__.py  cli.py  config.py
agentctl/commands/: __init__.py  compare.py  config_cmd.py  costs.py  logs.py  models.py  run.py  session.py
agentctl/providers/: __init__.py  anthropic_provider.py  ollama.py  openai_provider.py
tests/: test_basic.py
